Normalize app arguments in ENF mode